--- a/public/Components/MessengerComponent/ChatWindowComponent.scss
+++ b/public/Components/MessengerComponent/ChatWindowComponent.scss
@@ -41,6 +41,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-right: 64px;
 }
 
 .chat-window__title {
@@ -48,8 +49,13 @@
     font-weight: 500;
     font-size: 13px;
     line-height: 130%;
-    text-align: center;
     color: var(--text-primary);
+    word-break: break-word;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
 }
 
 .chat-window__status {
@@ -57,8 +63,13 @@
     font-weight: 400;
     font-size: 13px;
     line-height: 130%;
-    text-align: center;
     color: var(--text-secondary);
+    word-break: break-word;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
 }
 
 .chat-window__dropdown {
