--- a/public/Views/ProfileView/ProfileView.scss
+++ b/public/Views/ProfileView/ProfileView.scss
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    padding-right: 32px;
 }
 
 .profile__name {
@@ -49,6 +50,12 @@
     font-size: var(--font-size-xl);
     line-height: var(--line-height-m);
     color: var(--text-primary);
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    word-break: break-all;
 }
 
 .profile__avatar {
@@ -86,6 +93,14 @@
 
 .profile__detail-text {
     word-break: break-word;
+}
+
+.profile__detail-text_short {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
 }
 
 .profile__icon {
